Fix the various bugs and minor code refactor.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -127,6 +127,7 @@
   "txt-shareFolders": "Share Folders",
   "txt-reTrigger": "Get latest System info",  
   "txt-requestSent": "Request Sent",
+  "txt-analyze": "Analyze",
 
   "txt-daily": "Daily",
   "txt-weekly": "Weekly",
