--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -127,6 +127,7 @@
   "txt-shareFolders": "Share Folders",
   "txt-reTrigger": "重新獲取資訊",
   "txt-requestSent": "需求已送出",
+  "txt-analyze": "分析",
 
   "txt-daily": "每日",
   "txt-weekly": "每星期",
