--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -422,6 +422,12 @@
   "notifications": {
     "txt-settings": "通知設定",
     "txt-emailSettings": "Email設定",
+    "txt-serviceNotifications": "服務通知設定",
+    "txt-edgeNotifications": "Edge設備通知設定",
+    "txt-alertNotifications": "告警通知設定",
+    "txt-serviceError": "服務狀態錯誤",
+    "txt-conectionsError": "連線狀態錯誤",
+    "txt-dailyAlert": "每日告警統計",
     "txt-smtpServer": "SMTP主機",
     "txt-smtpPort": "SMTP Port",
     "txt-sender": "寄件者",
